--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Contact Me</h3>
-      <p class="contactme">If you wannna discuss film theories you can message me.</p>
+      <p class="contactme">If you wannna discuss film theories you can message me.
               My Instagram id is @nilimpvats.</p>
       <a class="btn" href="mailto:nilimp.cms@gmail.com">CONTACT ME</a>
     </div>
